创建项目并将之前的代码copy到该项目

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,9 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# 排除整个 lib/ 文件夹
+lib/
+
+# 但保留 lib/README.md 文件
+!lib/README.md
