--- a/WKMultiPlayerMod.csproj
+++ b/WKMultiPlayerMod.csproj
@@ -1,64 +1,68 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyName>WKMultiMod</AssemblyName>
-    <Product>WKMultiMod</Product>
-    <Version>0.10.8</Version>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <LangVersion>latest</LangVersion>
-    <RestoreAdditionalProjectSources>
-      https://api.nuget.org/v3/index.json;
-      https://nuget.bepinex.dev/v3/index.json;
-      https://nuget.samboy.dev/v3/index.json
-    </RestoreAdditionalProjectSources>
-    <RootNamespace>WKMultiMod</RootNamespace>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<AssemblyName>WKMultiMod</AssemblyName>
+		<Product>WKMultiMod</Product>
+		<Version>0.11.2</Version>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+		<LangVersion>latest</LangVersion>
+		<RestoreAdditionalProjectSources>
+			https://api.nuget.org/v3/index.json;
+			https://nuget.bepinex.dev/v3/index.json;
+			https://nuget.samboy.dev/v3/index.json
+		</RestoreAdditionalProjectSources>
+		<RootNamespace>WKMultiMod</RootNamespace>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
-    <PackageReference Include="BepInEx.Core" Version="5.*" />
-    <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
-    <PackageReference Include="HarmonyX" Version="2.16.0" />
-    <PackageReference Include="LiteNetLib" Version="1.3.1" />
-  </ItemGroup>
-  
-  <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
-  </ItemGroup>
-  
-  <ItemGroup>
-    <Reference Include="ALINE">
-      <HintPath>..\WhiteKnuckleMod\libs\ALINE.dll</HintPath>
-      		  <Private>False</Private>		
-    </Reference>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>..\WhiteKnuckleMod\libs\Assembly-CSharp.dll</HintPath>
-      	<Private>False</Private>		
-    </Reference>
-    <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>..\WhiteKnuckleMod\libs\Assembly-CSharp-firstpass.dll</HintPath>
-      	<Private>False</Private>		
-    </Reference>
-    <Reference Include="UnityEngine">
-      <HintPath>..\WhiteKnuckleMod\libs\UnityEngine.dll</HintPath>
-      	<Private>False</Private>		
-    </Reference>
-    <Reference Include="UnityEngine.CoreModule">
-      <HintPath>..\WhiteKnuckleMod\libs\UnityEngine.CoreModule.dll</HintPath>
-      	<Private>False</Private>		
-    </Reference>
-    <Reference Include="UnityEngine.InputLegacyModule">
-      <HintPath>..\WhiteKnuckleMod\libs\UnityEngine.InputLegacyModule.dll</HintPath>
-      	<Private>False</Private>		
-    </Reference>
-    <Reference Include="UnityEngine.PhysicsModule">
-      <HintPath>..\WhiteKnuckleMod\libs\UnityEngine.PhysicsModule.dll</HintPath>
-      	<Private>False</Private>		
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>..\WhiteKnuckleMod\libs\UnityEngine.UI.dll</HintPath>
-      	<Private>False</Private>		
-    </Reference>
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
+		<PackageReference Include="BepInEx.Core" Version="5.*" />
+		<PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
+		<PackageReference Include="HarmonyX" Version="2.16.0" />
+		<PackageReference Include="LiteNetLib" Version="1.3.1" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
+		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Reference Include="ALINE">
+			<HintPath>..\WhiteKnuckleMod\libs\ALINE.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="Assembly-CSharp">
+			<HintPath>..\WhiteKnuckleMod\libs\Assembly-CSharp.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="Assembly-CSharp-firstpass">
+			<HintPath>..\WhiteKnuckleMod\libs\Assembly-CSharp-firstpass.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="Unity.TextMeshPro">
+			<HintPath>libs\Unity.TextMeshPro.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="UnityEngine">
+			<HintPath>..\WhiteKnuckleMod\libs\UnityEngine.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="UnityEngine.CoreModule">
+			<HintPath>..\WhiteKnuckleMod\libs\UnityEngine.CoreModule.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="UnityEngine.InputLegacyModule">
+			<HintPath>..\WhiteKnuckleMod\libs\UnityEngine.InputLegacyModule.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="UnityEngine.PhysicsModule">
+			<HintPath>..\WhiteKnuckleMod\libs\UnityEngine.PhysicsModule.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="UnityEngine.UI">
+			<HintPath>..\WhiteKnuckleMod\libs\UnityEngine.UI.dll</HintPath>
+			<Private>False</Private>
+		</Reference>
+	</ItemGroup>
 </Project>
