--- a/.gitignore
+++ b/.gitignore
@@ -362,11 +362,11 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
-# 排除整个 lib/ 文件夹
-lib/
+# 排除整个 libs/ 文件夹
+libs/
 
-# 但保留 lib/README.md 文件
-!lib/README.md
+# 但保留 libs/README.md 文件
+!libs/README.md
 
 # 排除整个 temp/ 文件夹 
 # 我用来存放他人代码和工具的位置
