--- a/.gitignore
+++ b/.gitignore
@@ -364,9 +364,12 @@ FodyWeavers.xsd
 
 # 排除整个 libs/ 文件夹
 libs/
+lib/
 
 # 但保留 libs/README.md 文件
 !libs/README.md
+!lib/README.md
+
 
 # 排除整个 temp/ 文件夹 
 # 我用来存放他人代码和工具的位置
