修改部分文件位置

--- a/src/Test/test.csproj
+++ b/src/Test/test.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Core\WKMultiPlayerMod.csproj" />
+    <ProjectReference Include="..\..\src\Core\WKMultiPlayerMod.csproj" />
   </ItemGroup>
 
   <ItemGroup>
