--- a/src/Core/WKMultiPlayerMod.csproj
+++ b/src/Core/WKMultiPlayerMod.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<AssemblyName>WKMultiPlayerMod</AssemblyName>
 		<Product>WKMultiPlayerMod</Product>
-		<Version>1.1.5.0</Version>
+		<Version>1.1.6.0</Version>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<LangVersion>latest</LangVersion>
 		<RestoreAdditionalProjectSources>
@@ -32,9 +32,7 @@
 			<SharedOutputFiles Include="$(TargetDir)Localization\*.json" />
 		</ItemGroup>
 		<!--生成.dll复制到bin\解决方案配置-->
-		<Copy SourceFiles="@(SharedOutputFiles)"
-			DestinationFolder="$(SolutionDir)bin\$(Configuration)\"
-			SkipUnchangedFiles="true" />
+		<Copy SourceFiles="@(SharedOutputFiles)" DestinationFolder="$(SolutionDir)bin\$(Configuration)\" SkipUnchangedFiles="true" />
 	</Target>
 
 	<ItemGroup>
