--- a/src/Shared/WKMultiPlayerMod.Shared.csproj
+++ b/src/Shared/WKMultiPlayerMod.Shared.csproj
@@ -8,6 +8,7 @@
 		<!-- <OutputPath>$(SolutionDir)bin\$(Configuration)\</OutputPath> -->
 		<!-- 项目本身的 bin 目录 -->
 		<OutputPath>bin\$(Configuration)\</OutputPath>
+        <SolutionDir>..\..\</SolutionDir>
 	</PropertyGroup>
 
 	<!-- AfterTargets="PostBuildEvent"表示在生成完成后执行 -->
